--- a/Table/menu.css
+++ b/Table/menu.css
@@ -100,3 +100,9 @@ tbody tr:hover {
   cursor: pointer;
   border-radius: 4px;
 }
+
+#pagination button:active{
+  background-color: #017c8c;
+  color: white;
+}
+
