--- a/Table/product.css
+++ b/Table/product.css
@@ -62,6 +62,10 @@ body {
   margin-bottom: 20px;
 }
 
+.details h4{
+  font-size: 15px;
+  margin-bottom: 20px;
+}
 .details p {
   line-height: 1.6;
   margin-bottom: 10px;
