--- a/Table/reviewForm.css
+++ b/Table/reviewForm.css
@@ -1,40 +1,52 @@
-body,
-html {
-  box-sizing: border-box;
-}
+
 .reviewForm {
+  max-width: 60%;
   margin: 40px auto;
-  /* border: 1px solid black; */
-  width: 60%;
-  height: 350px;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+  text-align: left;
 }
-input[type="text"],
-textarea {
-  width: 100%; 
-  padding: 10px;
-  border: 1px solid #ccc; 
-  border-radius: 4px; 
-  box-sizing: border-box;
-  margin-top: 6px; 
+
+.reviewForm label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px;
+  font-size: 18px;
+}
+
+input[type="text"], input[type="number"], textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
   margin-bottom: 16px;
-  resize: vertical; 
+  font-size: 16px;
+  box-sizing: border-box;
 }
-input[type="submit"] {
-     padding: 12px 20px;
-     border-radius: 5px;
-     border: none;
-     background-color: #000;
-     color: white;
-     font-size: 16px;
-     cursor: pointer;
-     float: inline-end;
-     transition: background-color 0.3s ease;
+
+input[type="number"] {
+  width: 100%;
 }
-input[type="submit"]:hover {
+
+button[type="submit"] {
+  padding: 12px 20px;
+  border-radius: 4px;
+  border: none;
+  background-color: #000;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
   background-color: #444;
 }
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+
+textarea {
+  height: 150px;
+  resize: none;
 }
+
